--- a/ee25btech11049/Matgeo/2.5.3/beamer/main.tex
+++ b/ee25btech11049/Matgeo/2.5.3/beamer/main.tex
@@ -109,10 +109,19 @@ Given
  \vec{C}=\myvec{6\\7}
 \end{align} 
 \begin{align}
-   \vec{B}-\vec{A}=\myvec{10\\0},
-   \vec{C}-\vec{B}=\myvec{-2\\4},
+   \vec{B}-\vec{A}=\myvec{10\\0}
+\end{align}
+
+\begin{align}
+   \vec{C}-\vec{B}=\myvec{-2\\4}
+\end{align}
+
+\begin{align}
    \vec{C}-\vec{A}=\myvec{8\\4}
 \end{align}
+\end{frame}	
+
+\begin{frame}{Theoretical Solution}
 For a right angle, the dot product of two sides must be zero,
 \begin{align}
 \brak{\vec{C}-\vec{A}}^T\brak{\vec{C}-\vec{B}}=\brak{-2}\brak{8}+\brak{4}\brak{4}=0
