--- a/ee25btech11049/Matgeo/2.5.3/main.tex
+++ b/ee25btech11049/Matgeo/2.5.3/main.tex
@@ -75,8 +75,14 @@ Given:
  \vec{C}=\myvec{6\\7}
 \end{align} 
 \begin{align}
-   \vec{B}-\vec{A}=\myvec{10\\0},
-   \vec{C}-\vec{B}=\myvec{-2\\4},
+   \vec{B}-\vec{A}=\myvec{10\\0}
+\end{align}
+
+\begin{align}
+   \vec{C}-\vec{B}=\myvec{-2\\4}
+\end{align}
+
+\begin{align}
    \vec{C}-\vec{A}=\myvec{8\\4}
 \end{align}
 For a right angle, the dot product of two sides must be zero,
