--- a/ee25btech11049/Matgeo/4.11.26/beamer/b.tex
+++ b/ee25btech11049/Matgeo/4.11.26/beamer/b.tex
@@ -96,31 +96,36 @@ We express the three boundary lines in the vector form $\vec{n}^T \vec{x} = c$, 
 \end{align}
 \end{frame}
 \begin{frame}{Vertex A (Intersection of $L_1$ and $L_2$)}
-The intersection of any two lines is the solution to a system of linear equations, which we solve using matrix inversion.
-
-The system is $\myvec{1 & -1 \\ 1 & 1} \myvec{x \\ y} = \myvec{1 \\ 1}$. \\The solution is $\vec{x} = \vec{N}_{12}^{-1}\vec{c}_{12}$.\\
-\begin{align}  
-\vec{A} &= \myvec{1 & -1 \\ 1 & 1}^{-1} \myvec{1 \\ 1} \\
-&= \frac{1}{1(1) - (-1)(1)} \myvec{1 & 1 \\ -1 & 1} \myvec{1 \\ 1} \\
-&= \frac{1}{2} \myvec{1(1) + 1(1) \\ -1(1) + 1(1)} = \frac{1}{2} \myvec{2 \\ 0} = \myvec{1 \\ 0}
-\end{align}  
+The intersection of any two lines is the solution to a system of linear equations, which we solve using Augmented Matrix
+\begin{align}
+   \augvec{2}{1}{1 & -1 &1 \\1 & 1 & 1}\xleftrightarrow[]{R_2\rightarrow R_2-R_1}\augvec{2}{1}{1 & -1 & 1\\0 & 2 & 0}
+\end{align}
+\begin{align}
+   \augvec{2}{1}{1 & -1 & 1\\0 & 2 & 0}\xleftrightarrow[]{R_2\rightarrow \frac{1}{2}R_2}\augvec{2}{1}{1 & -1 & 1\\0 & 1 & 0}
+\end{align}
+\begin{align}
+   \augvec{2}{1}{1 & -1 & 1\\0 & 1 & 0}\xleftrightarrow[]{R_1\rightarrow R_1+R_2}\augvec{2}{1}{1 & 0 & 1\\0 & 1 & 0}
+\end{align}
+\begin{align}
+    \vec{A}=\myvec{1\\0}
+\end{align}
 \end{frame}
 \begin{frame}{Vertex B (Intersection of $L_1$ and $L_3$)}
-The system is $\myvec{1 & -1 \\ 0 & 1} \myvec{x \\ y} = \myvec{1 \\ 1}$. The solution is $\vec{x} = \vec{N}_{13}^{-1}\vec{c}_{13}$.
-\begin{align}  
-\vec{B} &= \myvec{1 & -1 \\ 0 & 1}^{-1} \myvec{1 \\ 1} \\
-&= \frac{1}{1(1) - (-1)(0)} \myvec{1 & 1 \\ 0 & 1} \myvec{1 \\ 1} \\
-&= \myvec{1(1) + 1(1) \\ 0(1) + 1(1)} = \myvec{2 \\ 1}
-\end{align}  
+\begin{align}
+   \augvec{2}{1}{1 & -1 &1 \\0 & 1 & 1}\xleftrightarrow[]{R_1\rightarrow R_1+R_2}\augvec{2}{1}{1 & 0 & 2\\0 & 1 & 1}
+\end{align}
+\begin{align}
+    \vec{B}=\myvec{2\\1}
+\end{align}
 \end{frame}
 \begin{frame}{Vertex C (Intersection of $L_2$ and $L_3$)}
-The system is $\myvec{1 & 1 \\ 0 & 1} \myvec{x \\ y} = \myvec{1 \\ 1}$. The solution is $\vec{x} = \vec{N}_{23}^{-1}\vec{c}_{23}$.
-\begin{align}  
-\vec{C} &= \myvec{1 & 1 \\ 0 & 1}^{-1} \myvec{1 \\ 1} \\
-&= \frac{1}{1(1) - 1(0)} \myvec{1 & -1 \\ 0 & 1} \myvec{1 \\ 1} \\
-&= \myvec{1(1) - 1(1) \\ 0(1) + 1(1)} = \myvec{0 \\ 1}
+\begin{align}
+   \augvec{2}{1}{1 & 1 &1 \\0 & 1 & 1}\xleftrightarrow[]{R_1\rightarrow R_1-R_2}\augvec{2}{1}{1 & 0 & 0\\0 & 1 & 1}
+\end{align}
+\begin{align}
+    \vec{C}=\myvec{0\\1}
 \end{align}  
-The vertices are $\vec{A}=(1,0)$, $\vec{B}=(2,1)$, and $\vec{C}=(0,1)$.
+The vertices are $\vec{A}=\myvec{1\\0}$, $\vec{B}=\myvec{2\\1}$, and $\vec{C}=\myvec{0\\1}$.
 \end{frame}
 \begin{frame}{Calculating Area with Vector Determinant}
 We form two vectors representing two sides of the triangle, $\vec{AB}$ and $\vec{AC}$.
